Revert "Merge branch 'master' into alumni_collection"
This reverts commit a8ad62a4ed7c1f901a50e5140697add7807d9f21, reversing
changes made to 82d02f351ecc28a2224074ee2111f1cfdb77c323.

--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ collections:
         publications:
                 output: true
         alumni:
+                sort_by: enddate
                 output: true
         sep:
                 output: true
