--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-name: "Fraser Lab"
+name: "Stajich Lab"
 description: "This is the official web page for the James Fraser Lab at UCSF."
 
-url: "http://fraserlab.com"
+url: "http://stajichlab.github.io"
 
 paginate: 5
 plugins: [jekyll-paginate]
