--- a/_data/navlinks.yml
+++ b/_data/navlinks.yml
@@ -1,36 +1,36 @@
-- name: home
+- name: Home
   link: "/"
   group: home
 
-- name: research
+- name: Research
   link: "/research"
   group: research
 
-- name: publications
+- name: Publications
   link: "/publications"
   group: publications
 
-- name: members
+- name: Members
   link: "/members"
   group: members
 
-- name: teaching
+- name: Teaching
   link: "/courses"
   group: courses
 
-- name: philosophy
-  link: "/compact"
-  group: compact
+#- name: philosophy
+#  link: "/compact"
+#  group: compact
 
 - name: news
   link: "/news"
   group: news
 
-- name: join
+- name: Join
   link: "/join"
   group: join
 
-- name: contact
+- name: Contact
   link: "/contact"
   group: contact
 
@@ -38,6 +38,6 @@
 #   link: "/links"
 #   group: links
 
-- name: private
-  link: "https://sites.google.com/fraserlab.com/fraserlab-private/" #"https://sites.google.com/a/fraserlab.com/ucsf-private/"
-  group: private
+#- name: private
+#  link: "https://sites.google.com/fraserlab.com/fraserlab-private/" #"https://sites.google.com/a/fraserlab.com/ucsf-private/"
+#  group: private
