--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: "Stajich Lab"
-description: "This is the official web page for the Jason E. Stajcih Lab at UCR."
+description: "This is the official web page for the Jason E. Stajich Lab at UCR."
 
 url: "http://stajichlab.github.io"
 
