--- a/_data/navlinks.yml
+++ b/_data/navlinks.yml
@@ -30,6 +30,10 @@
   link: "/join"
   group: join
 
+- name: SOP
+  link: "/SOP"
+  group: SOP
+
 - name: Contact
   link: "/contact"
   group: contact
